deployments/blue-green/bule-servie-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    name: hello
    version: "v1"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hello
    version: "v1"
  type: LoadBalancer
