deployments/blue-green/green-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hello
        version: "v2"
    spec:
      containers:
        - name: hello
          image: naveen5035/hello:v2
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    name: hello
    version: "v2"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hello
    version: "v2"
  type: LoadBalancer
