deployments/blue-green/service-blue-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    name: hello
    version: "v2"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hello
    version: "v2"
  type: LoadBalancer
